fixed issues in references file

--- a/references.bib
+++ b/references.bib
@@ -148,13 +148,7 @@
   Pages                    = {1141–1144},
   Volume                   = {85},
 
-  __markedentry            = {[naeem:]},
-  Doi                      = {10.1785/0220140120},
-  ISSN                     = {1938-2057},
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America (SSA)},
-  Timestamp                = {2016.10.19},
-  Url                      = {http://dx.doi.org/10.1785/0220140120}
+  Doi                      = {10.1785/0220140120}
 }
 
 @Book{Baker2008,
@@ -165,7 +159,7 @@
 }
 
 @Article{Barani2007,
-  Title                    = {Sensitivity analysis of seismic hazard for {W}estern {L}iguria ({N}orth {W}estern {I}taly): a first attempt towards the understanding and quantification of hazard uncertainty},
+  Title                    = {Sensitivity analysis of seismic hazard for western {L}iguria (north western {I}taly): {A} first attempt towards the understanding and quantification of hazard uncertainty},
   Author                   = {Barani, Simone and Spallarossa, Daniele and Bazzurro, Paolo and Eva, Claudio},
   Journal                  = {Tectonophysics},
   Year                     = {2007},
@@ -224,7 +218,7 @@
 }
 
 @Book{Berberian_1995_Tech,
-  Title                    = {Natural Hazards and the First Earthquake Catalogue of {I}ran: {V}olume 1: {H}istorical Hazards in {I}ran Prior to 1900},
+  Title                    = {Natural hazards and the first earthquake catalog of {I}ran: {V}olume 1: {H}istorical hazards in {I}ran prior to 1900},
   Author                   = {Berberian, Manuel},
   Publisher                = {A UNESCO/IIEES publication during UN/IDNDR, International Institute of Earthquake Engineering and Seismology, 603 (in English) + 66 (in Persian) pp.},
   Year                     = {1995},
@@ -244,7 +238,7 @@
 }
 
 @Article{Berberian2001,
-  Title                    = {Contribution of archaeological data to studies of earthquake history in the {I}ranian {P}lateau},
+  Title                    = {Contribution of archaeological data to studies of earthquake history in the {I}ranian plateau},
   Author                   = {Berberian, Manuel and Yeats, Robert S},
   Journal                  = {Journal of Structural Geology},
   Year                     = {2001},
@@ -256,7 +250,7 @@
 }
 
 @Article{Berberian1999,
-  Title                    = {Patterns of historical earthquake rupture in the {I}ranian {P}lateau},
+  Title                    = {Patterns of historical earthquake rupture in the {I}ranian plateau},
   Author                   = {Berberian, Manuel and Yeats, Robert S},
   Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {1999},
@@ -299,11 +293,14 @@
   Publisher                = {Springer}
 }
 
-@Book{Boyd2007,
-  Title                    = {Preliminary Earthquake Hazard Map of {A}fghanistan},
+@TechReport{Boyd2007,
+  Title                    = {Preliminary earthquake hazard map of {A}fghanistan},
   Author                   = {Boyd, Oliver S and Mueller, Charles S and Rukstales, Kenneth},
-  Publisher                = {US Geological Survey},
-  Year                     = {2007}
+  Institution              = {U.S.~Geological Survey},
+  Year                     = {2007},
+  Number                   = {OFR 2007-1137},
+
+  Publisher                = {US Geological Survey}
 }
 
 @InCollection{Boyd2008,
@@ -440,7 +437,7 @@
 }
 
 @Article{Gardner1974,
-  Title                    = {Is the sequence of earthquakes in {S}outhern {C}alifornia, with aftershocks removed, {P}oissonian},
+  Title                    = {Is the sequence of earthquakes in southern {C}alifornia, with aftershocks removed, {P}oissonian?},
   Author                   = {Gardner, JK and Knopoff, L},
   Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {1974},
@@ -556,7 +553,7 @@
 }
 
 @Article{Gutenberg1944,
-  Title                    = {Frequency of earthquakes in California},
+  Title                    = {Frequency of earthquakes in {C}alifornia},
   Author                   = {Gutenberg, Beno and Richter, Charles F},
   Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {1944},
@@ -836,6 +833,14 @@
   Publisher                = {EDITORIAL DEPARTMENT, JOURNAL OF EARTHQUAKE PREDICTION RESEARCH}
 }
 
+@TechReport{Moinfar1994,
+  Title                    = {Historical and instrumental earthquake data collection of {I}ran (in {P}ersian)},
+  Author                   = {Moinfar, A. A. and Mahdavian, A and Maleki, E},
+  Institution              = {Iranian Cultural Fairs Institute},
+  Year                     = {1994},
+  Note                     = {445 pp}
+}
+
 @InCollection{Moinfar_2000_Chap,
   Title                    = {A New Seismic Hazard Map for the Implementation in the National Physical Planning of {I}ran},
   Author                   = {Moinfar, A. A. and Naderzadeh, A. and Maleki, E.},
@@ -857,14 +862,6 @@
 
   Address                  = {September 24--28, Lisbon, Portugal},
   Number                   = {1480}
-}
-
-@TechReport{Moinfar1994,
-  Title                    = {Historical and instrumental earthquake data collection of {I}ran (in Persian)},
-  Author                   = {Moinfar, A and Mahdavian, A and Maleki, E},
-  Institution              = {Iranian Cultural Fairs Institute},
-  Year                     = {1994},
-  Note                     = {445 pp}
 }
 
 @InProceedings{Moschetti2014,
@@ -936,7 +933,7 @@
 }
 
 @Book{Petersen2008,
-  Title                    = {Documentation for the 2008 {U}pdate of the {U}nited {S}tates {N}ational {S}eismic {H}azard {M}aps},
+  Title                    = {Documentation for the 2008 update of the {U}nited {S}tates national seismic hazard maps},
   Author                   = {Petersen, Mark D and Frankel, Arthur D and Harmsen, Stephen C and Mueller, Charles S and Haller, Kathleen M and Wheeler, Russell L and Wesson, Robert L and Zeng, Yuehua and Boyd, Oliver S and Perkins, David M and Luco, Nicolas and Field, Edward H and Wills, Chris J and Rukstales, Kenneth S },
   Publisher                = {US Geological Survey},
   Year                     = {2008}
@@ -979,7 +976,7 @@
 }
 
 @Article{Reasenberg1985,
-  Title                    = {Second-order moment of central California seismicity, 1969--1982},
+  Title                    = {Second-order moment of central {C}alifornia seismicity, 1969--1982},
   Author                   = {Reasenberg, Paul},
   Journal                  = {Journal of Geophysical Research: Solid Earth (1978--2012)},
   Year                     = {1985},
@@ -1011,13 +1008,7 @@
   Pages                    = {365–380},
   Volume                   = {91},
 
-  __markedentry            = {[naeem:6]},
-  Doi                      = {10.1785/0120000049},
-  ISSN                     = {0037-1106},
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America (SSA)},
-  Timestamp                = {2017.01.12},
-  Url                      = {http://dx.doi.org/10.1785/0120000049}
+  Doi                      = {10.1785/0120000049}
 }
 
 @Article{Scherbaum_2004_BSSA,
@@ -1064,7 +1055,6 @@
   Publisher                = {Cambridge University Press},
   Year                     = {2009},
 
-  Owner                    = {naeem},
   Timestamp                = {2016.01.15}
 }
 
@@ -1079,12 +1069,7 @@
   Pages                    = {645–679},
   Volume                   = {188},
 
-  Doi                      = {10.1111/j.1365-246x.2011.05287.x},
-  ISSN                     = {0956-540X},
-  Owner                    = {naeem},
-  Publisher                = {Oxford University Press (OUP)},
-  Timestamp                = {2016.10.03},
-  Url                      = {http://dx.doi.org/10.1111/j.1365-246X.2011.05287.x}
+  Doi                      = {10.1111/j.1365-246x.2011.05287.x}
 }
 
 @Article{Stocklin1968,
@@ -1124,7 +1109,7 @@
 }
 
 @Article{Trifonov1978,
-  Title                    = {Late Quaternary tectonic movements of {W}estern and {C}entral {A}sia},
+  Title                    = {Late Quaternary tectonic movements of Western and Central {A}sia},
   Author                   = {Trifonov, Vladimir G},
   Journal                  = {Geological Society of America Bulletin},
   Year                     = {1978},
@@ -1137,7 +1122,7 @@
 }
 
 @Article{Uhrhammer_1986_EN,
-  Title                    = {Characteristics of northern and central California seismicity},
+  Title                    = {Characteristics of northern and central {C}alifornia seismicity},
   Author                   = {Uhrhammer, R. A.},
   Journal                  = {Earthquake Notes},
   Year                     = {1986},
@@ -1166,7 +1151,7 @@
 }
 
 @Article{Werner2011,
-  Title                    = {High-Resolution Long-Term and Short-Term Earthquake Forecasts for California},
+  Title                    = {High-Resolution Long-Term and Short-Term Earthquake Forecasts for {C}alifornia},
   Author                   = {Werner, M. J. and Helmstetter, A. and Jackson, D. D. and Kagan, Y. Y.},
   Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {2011},
@@ -1176,12 +1161,7 @@
   Pages                    = {1630–1648},
   Volume                   = {101},
 
-  Doi                      = {10.1785/0120090340},
-  ISSN                     = {0037-1106},
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America (SSA)},
-  Timestamp                = {2016.10.03},
-  Url                      = {http://dx.doi.org/10.1785/0120090340}
+  Doi                      = {10.1785/0120090340}
 }
 
 @Book{wesson1999,
@@ -1205,7 +1185,7 @@
 }
 
 @Article{Wiemer2000,
-  Title                    = {Minimum magnitude of completeness in earthquake catalogs: examples from {A}laska, the {We}stern {U}nited {S}tates, and {J}apan},
+  Title                    = {Minimum magnitude of completeness in earthquake catalogs: {E}xamples from {A}laska, the {We}stern {U}nited {S}tates, and {J}apan},
   Author                   = {Wiemer, Stefan and Wyss, Max},
   Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {2000},
@@ -1251,7 +1231,7 @@
 }
 
 @Article{Zare2014,
-  Title                    = {Recent developments of the Middle East catalog},
+  Title                    = {Recent developments of the {M}iddle {E}ast catalog},
   Author                   = {Zare, Mehdi and Amini, Hamideh and Yazdi, Pouye and Sesetyan, Karin and Demircioglu, Mine Betul and Kalafat, Dogan and Erdik, Mustafa and Giardini, Domenico and Khan, M Asif and Tsereteli, Nino},
   Journal                  = {Journal of Seismology},
   Year                     = {2014},
