cleaned files of revision comments and modified acknowledgments

--- a/acknowledge.tex
+++ b/acknowledge.tex
@@ -1,3 +1,3 @@
 \section{Acknowledgements}
 
-\myrevision{The authors wish to express their thanks to two anonymous reviewers whose comments and suggestions greatly help to improve the original manuscript. A message of} gratitude is also extended to Art Fran\-kel at the U.S.~Geological Survey (USGS) for providing access to the Smoothed Probabilistic Seismic Hazard Analysis software and to Morgan Moschetti, also at the USGS, for providing \myrevision{advice} on the use of the software. The authors also thank Andrzej Kijko at the University of Pretoria for providing access to the software for computing the seismicity parameters; and Mehdi Zare at the International Institute of Earthquake Engineering and Seismology (IIEES) in Tehran for kindly providing the original catalog data and for his assistance in interpreting previous catalog information. Access to data provided by IIEES is also greatly appreciated. This research was possible thanks to support by the Center for Earthquake Research and Information (CERI) at the University of Memphis. CERI is designated as a Center of Excellence by the Tennessee Board of Regents and is funded in part by the State of Tennessee under State \myrevision{Sunset} Laws (SB 1510 and HB 1608, 2015--2016).
+The authors wish to express their thanks to \myrevision{three anonymous reviewers and Editor in Chief Mariano Garc\'{i}a Fern\'{a}ndez whose insightful comments and candid suggestions greatly helped improve the original and revised manuscripts}. A message of gratitude is also extended to Art Fran\-kel at the U.S.~Geological Survey (USGS) for providing access to the Smoothed Probabilistic Seismic Hazard Analysis software and to Morgan Moschetti, also at the USGS, for providing advice on the use of the software. The authors also thank Andrzej Kijko at the University of Pretoria for providing access to the software for computing the seismicity parameters; and Mehdi Zare at the International Institute of Earthquake Engineering and Seismology (IIEES) in Tehran for kindly providing the original catalog data and for his assistance in interpreting previous catalog information. Access to data provided by IIEES is also greatly appreciated. This research was possible thanks to support by the Center for Earthquake Research and Information (CERI) at the University of Memphis. CERI is designated as a Center of Excellence by the Tennessee Board of Regents and is funded in part by the State of Tennessee under State Sunset Laws (SB 1510 and HB 1608, 2015--2016).
