--- a/logictree.tex
+++ b/logictree.tex
@@ -1,6 +1,6 @@
 
-\section{\myrevision{Logic Tree}}
+\section{Logic Tree}
 
-\myrevision{As mentioned in previous sections, we address the uncertainties in our models, seismic parameters and selected ground motion prediction equation via a logic tree. Fig.~\ref{fig:logic} shows the complete set of branches at each of the tree nodes. In particular, we consider uncertainty in the seismic zonation via the combination of the R and U models, the maximum magnitude $M_{\max}$, the seismic $b$-value, and the prediction of PGA intensities in the GMPE by \citet{Kalkan2004}. We assigned the weights to the R and U model arbitrarily, giving more weight to the regional model R based on the expectation that a regionalized model would likely lead to a better seismic hazard analysis. The uncertainty in $M_{\max}$ and the $b$ values were set equal to the plus and minus ranges shown in Table \ref{tab:params}. Finally, the uncertainty in the GMPE---that is, the upper and lower bounds taken as alternative GMPEs---was based on the amplitude of one standard deviation, $\sigma_{\ln y} = 0.612$. The weights assigned in the logic tree to these additional sources of uncertainty were defined based on previous studies \citep[e.g.,][]{Petersen2008}.}
+As mentioned in previous sections, we address the uncertainties in our models, seismic parameters and selected ground motion prediction equation via a logic tree. Fig.~\ref{fig:logic} shows the complete set of branches at each of the tree nodes. In particular, we consider uncertainty in the seismic zonation via the combination of the R and U models, the maximum magnitude $M_{\max}$, the seismic $b$-value, and the prediction of PGA intensities in the GMPE by \citet{Kalkan2004}. We assigned the weights to the R and U model arbitrarily, giving more weight to the regional model R based on the expectation that a regionalized model would likely lead to a better seismic hazard analysis. The uncertainty in $M_{\max}$ and the $b$ values were set equal to the plus and minus ranges shown in Table \ref{tab:params}. Finally, the uncertainty in the GMPE---that is, the upper and lower bounds taken as alternative GMPEs---was based on the amplitude of one standard deviation, $\sigma_{\ln y} = 0.612$. The weights assigned in the logic tree to these additional sources of uncertainty were defined based on previous studies \citep[e.g.,][]{Petersen2008}.
 
-\myrevision{Among other possible parameters for which we could have consider additional sources of uncertainty, we note that we did not consider the variability of the reference depth and seismic velocities in the selected GMPE because these were values fixed to satisfy the fit of the equation with data from northern Iran. Thus introducing uncertainty in these parameters would have been to the detriment of the prediction of PGA values.}
+Among other possible parameters for which we could have consider additional sources of uncertainty, we note that we did not consider the variability of the reference depth and seismic velocities in the selected GMPE because these were values fixed to satisfy the fit of the equation with data from northern Iran. Thus introducing uncertainty in these parameters would have been to the detriment of the prediction of PGA values.
