--- a/table-pga.tex
+++ b/table-pga.tex
@@ -2,7 +2,7 @@
 
 \begin{table*}[t]
 \centering
-\caption{Comparison of expected PGA values \myrevision{(in $g$)} for selected cities in northern Iran between results obtained in this study and those of others previous studies. In our results, the values of the R and U models correspond to mean PGA values as shown also in Fig.~\ref{fig:pga}, and the (R,U) model values correspond to the combination of the R and U models shown in Fig.~\ref{fig:pga.ru.std}. The following codes are used for the references of other studies.
+\caption{Comparison of expected PGA values (in $g$) for selected cities in northern Iran between results obtained in this study and those of others previous studies. In our results, the values of the R and U models correspond to mean PGA values as shown also in Fig.~\ref{fig:pga}, and the (R,U) model values correspond to the combination of the R and U models shown in Fig.~\ref{fig:pga.ru.std}. The following codes are used for the references of other studies.
     Gh03: \citet{Ghodrati2003},
     Gh08: \citet{Ghodrati2008},
     Va11: \citet{Vafaie2011},
@@ -14,7 +14,6 @@
     Bo15: \citet{Boostan2015}.
     Kh16: \citet{Khodaverdian_2016_BSSA}
     }
-\myrevision{
 \begin{tabular}{lccccccccc}
     \hline                                                                                                              \\[-1.6ex]
     \multicolumn{2}{l}{This study}
@@ -53,6 +52,5 @@
     \multicolumn{10}{l}{\small{${}^{*}$ Used surface-wave magnitude $M_s$ 4.0 as magnitude threshold}}                  \\
     \multicolumn{10}{l}{\small{${}^{\dagger}$ Used $M_s$ 5.5 and 6.0 for Central-East and Alborz-Azerbaijan as magnitude threshold}}
 \end{tabular}
-}
 \label{tab:pga}
 \end{table*}
