--- a/attenuation.tex
+++ b/attenuation.tex
@@ -8,11 +8,11 @@
 
 \section{Attenuation Relationship}
 
-The last piece in our hazard analysis process is the choice of an adequate attenuation relationship, or ground motion prediction equation (GMPE). This is a highly influential factor because it controls \myrevision{the intensity level at a particular site given an earthquake of a certain magnitude and source characteristics and at a particular distance from the location of interest.}
+The last piece in our hazard analysis process is the choice of an adequate attenuation relationship, or ground motion prediction equation (GMPE). This is a highly influential factor because it controls the intensity level at a particular site given an earthquake of a certain magnitude and source characteristics and at a particular distance from the location of interest.
 
-Recently, \citet{Zafarani2014} investigated the predictive capabilities of a set of nine local, regional, and next generation attenuation (NGA) GMPEs to determine their applicability for northern Iran. They evaluated GMPE predictions against data from 32 earthquakes of magnitudes $M_w$ ranging between 4.7 and 7.4. This included comparisons of PGA and response spectral accelerations (SA) computed from time-series recorded on 163 stations located at epicentral distances of up to 200 km. The evaluation was done using the likelihood (LH) and log-likelihood (LLH) methods of \citet{Scherbaum_2004_BSSA, Scherbaum_2009_BSSA}. The combined evaluation for PGA, and SA for seven periods (T) between 0.1 and 2.0 s, yielded that the best overall predictions were those of the GMPEs introduced by \citet{Ghasemi_2009_JS}, \citet{Abrahamson_2008_ES}, and \citet{Chiou2008}. For the specific case of PGA ($T = 0$ s), however, the best results were those obtained with the GMPEs introduced by \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}. \myrevision{Other GMPEs with good prediction results for the region were those of \citet{Soghrat2012} and \citet{Akkar2010}}.
+Recently, \citet{Zafarani2014} investigated the predictive capabilities of a set of nine local, regional, and next generation attenuation (NGA) GMPEs to determine their applicability for northern Iran. They evaluated GMPE predictions against data from 32 earthquakes of magnitudes $M_w$ ranging between 4.7 and 7.4. This included comparisons of PGA and response spectral accelerations (SA) computed from time-series recorded on 163 stations located at epicentral distances of up to 200 km. The evaluation was done using the likelihood (LH) and log-likelihood (LLH) methods of \citet{Scherbaum_2004_BSSA, Scherbaum_2009_BSSA}. The combined evaluation for PGA, and SA for seven periods (T) between 0.1 and 2.0 s, yielded that the best overall predictions were those of the GMPEs introduced by \citet{Ghasemi_2009_JS}, \citet{Abrahamson_2008_ES}, and \citet{Chiou2008}. For the specific case of PGA ($T = 0$ s), however, the best results were those obtained with the GMPEs introduced by \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}. Other GMPEs with good prediction results for the region were those of \citet{Soghrat2012} and \citet{Akkar2010}.
 
-\myrevision{A common approach used in seismic hazard analysis given the availability of multiple GMPEs is to address the associated epistemic uncertainty through a combination of the various GMPEs. However, in comparisons not shown here for brevity, we found that some of these GMPEs yielded mean predictions that were very close to each other. In an analysis based on the LLH coefficients reported by \citet{Zafarani2014}, and using the approach of \citet{Scherbaum_2009_BSSA} we found, for instance, that a logic-tree partition for the GMPEs proposed by \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}, leads to weights of 0.3376, 0.3354, and 0.3270, respectively. These results meant that neither of these GMPEs has a substantial advantage over the others. This, however, would go against the need for accounting for uncertainty. Recently, \citet{Atkinson2014} argued that in such cases where multiple GMPEs do not offer sufficient variability, their combination does not necessarily and properly addresses uncertainty and suggested that, instead, one considers a set of high and low alternatives based on a central backbone model. Fig.~\ref{fig:att} illustrates the variation of horizontal PGA components with distance obtained using four of the GMPEs mentioned before for two different earthquake magnitudes. In these and other similar comparisons we noticed that the GMPE proposed by \citet{Kalkan2004} led to centered predictions and we chose this particular GMPE as our central backbone. Based on it, we defined an upper and lower bound (plus and minus one standard deviation, $\sigma_{\ln y}$) as the two alternative GMPEs in our logic tree analysis, such that---for the most part---the amplitudes predicted by the mean values of other GMPEs fell within the range defined by these bounds.}
+A common approach used in seismic hazard analysis given the availability of multiple GMPEs is to address the associated epistemic uncertainty through a combination of the various GMPEs. However, in comparisons not shown here for brevity, we found that some of these GMPEs yielded mean predictions that were very close to each other. In an analysis based on the LLH coefficients reported by \citet{Zafarani2014}, and using the approach of \citet{Scherbaum_2009_BSSA} we found, for instance, that a logic-tree partition for the GMPEs proposed by \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}, leads to weights of 0.3376, 0.3354, and 0.3270, respectively. These results meant that neither of these GMPEs has a substantial advantage over the others. This, however, would go against the need for accounting for uncertainty. Recently, \citet{Atkinson2014} argued that in such cases where multiple GMPEs do not offer sufficient variability, their combination does not necessarily and properly addresses uncertainty and suggested that, instead, one considers a set of high and low alternatives based on a central backbone model. Fig.~\ref{fig:att} illustrates the variation of horizontal PGA components with distance obtained using four of the GMPEs mentioned before for two different earthquake magnitudes. In these and other similar comparisons we noticed that the GMPE proposed by \citet{Kalkan2004} led to centered predictions and we chose this particular GMPE as our central backbone. Based on it, we defined an upper and lower bound (plus and minus one standard deviation, $\sigma_{\ln y}$) as the two alternative GMPEs in our logic tree analysis, such that---for the most part---the amplitudes predicted by the mean values of other GMPEs fell within the range defined by these bounds.
 
 The selected backbone GMPE for our analysis, as proposed by \citet{Kalkan2004}, is of the form
 %
@@ -23,7 +23,7 @@ The selected backbone GMPE for our analysis, as proposed by \citet{Kalkan2004}, 
 	\, ,
 \end{align}
 %
-where $Y$ is a ground motion parameter (here representing PGA), $V_A$ is a reference velocity in m/s, \myrevision{and} $V_S$ is the shear wave velocity of the site of interest. In this equation, the distance $r$ is given by
+where $Y$ is a ground motion parameter (here representing PGA), $V_A$ is a reference velocity in m/s, and $V_S$ is the shear wave velocity of the site of interest. In this equation, the distance $r$ is given by
 %
 \begin{equation}
 	r= \sqrt{ r^2_{\mathit{cl}} + h^2 }
