--- a/results.tex
+++ b/results.tex
@@ -24,35 +24,35 @@
 \begin{figure*}%[h!]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-13}
-    \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the two basic models considered in this study, R and U, and the combined model (R,U). \myrevision{Dashed lines represent the 0.0021 and 0.000404 annual probability of exceedance corresponding to probability of exceedance of 10 and 2 percent in 50 years.}}
+    \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the two basic models considered in this study, R and U, and the combined model (R,U). Dashed lines represent the 0.0021 and 0.000404 annual probability of exceedance corresponding to probability of exceedance of 10 and 2 percent in 50 years.}
     \label{fig:hazardcurve}
 \end{figure*}
 
 \section{Results and Analysis}
 
-Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected PGA values for two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes \myrevision{$M_w \geq 4.5$}. These probabilities correspond to return periods of 475 and 2,475 years. For nomenclature purposes, we use the probabilities as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceedance in 50 years using the five-regions model as R2, whereas for the case of 10 percent probability of exceedance when using the uniform model we use the tag name U10.
+Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected PGA values for two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes $M_w \geq 4.5$. These probabilities correspond to return periods of 475 and 2,475 years. For nomenclature purposes, we use the probabilities as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceedance in 50 years using the five-regions model as R2, whereas for the case of 10 percent probability of exceedance when using the uniform model we use the tag name U10.
 
-Our choice for the threshold magnitude is based on the assumption that at the local scale (where a point of interest is close to the source), the hazard will be controlled by events \myrevision{$M_w \geq 4.5$}, or conversely, \myrevision{$M_{\min}$ was chosen based on the expected smallest magnitude capable of causing damage}. In turn, the 2 and 10 percent probability of exceedance in a \myrevision{50-year} span are considered a standard practice in seismic design, and are the probabilities used in the Iranian building code \citep{BHRC2014}.
+Our choice for the threshold magnitude is based on the assumption that at the local scale (where a point of interest is close to the source), the hazard will be controlled by events $M_w \geq 4.5$, or conversely, $M_{\min}$ was chosen based on the expected smallest magnitude capable of causing damage. In turn, the 2 and 10 percent probability of exceedance in a 50-year span are considered a standard practice in seismic design, and are the probabilities used in the Iranian building code \citep{BHRC2014}.
 
 In the R models, we computed the probability of exceedance of the ground motion separately for each region and then added their exceedance rates at a given level of ground motion in order to have the contribution of all regions for any given grid point within the region of interest. The results are obtained in the form of annual rate of exceedance. Expected PGA values are therefore a ``slice'' of the actual hazard curves cut across all grid points for a chosen exceedance rate.
 
-Figure~\ref{fig:pga} shows the expected mean PGA values obtained for the R and U models, \myrevision{included the associated uncertainties in $b$, $M_{\max}$ and the GMPE. That is, the results in Fig.~\ref{fig:pga} correspond to the complete regional and uniform model branches in the logic tree for the different sub-models R2, R10, U2 and U10}. As can be expected, the highest PGA values are associated with the R2 and U2 models, and the lowest with the R10 and U10 models. For the R model results shown in Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Azerbaijan region \myrevision{on the west side of the North Tabriz Fault and also on and around the border of the Kopeh Dagh and Alborz tectonic seismic regions on the east side of the North Alborz Fault. We also observe higher hazard in the Alborz region in a small area east from the Mosha Fault. On the other hand, the results shown in Fig.~\ref{fig:pga}b for the U model indicate that in addition to these areas, there are also large expected ground motions in the Zagros seismic zone and increased PGA results in various areas within the Central East seismic region}.
+Figure~\ref{fig:pga} shows the expected mean PGA values obtained for the R and U models, included the associated uncertainties in $b$, $M_{\max}$ and the GMPE. That is, the results in Fig.~\ref{fig:pga} correspond to the complete regional and uniform model branches in the logic tree for the different sub-models R2, R10, U2 and U10. As can be expected, the highest PGA values are associated with the R2 and U2 models, and the lowest with the R10 and U10 models. For the R model results shown in Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Azerbaijan region on the west side of the North Tabriz Fault and also on and around the border of the Kopeh Dagh and Alborz tectonic seismic regions on the east side of the North Alborz Fault. We also observe higher hazard in the Alborz region in a small area east from the Mosha Fault. On the other hand, the results shown in Fig.~\ref{fig:pga}b for the U model indicate that in addition to these areas, there are also large expected ground motions in the Zagros seismic zone and increased PGA results in various areas within the Central East seismic region.
 
-In general, the U models exhibit higher levels of expected ground motions when compared to their corresponding R models. This is illustrated in Fig.~\ref{fig:pga.diff}, which shows the difference between both models, U--R (U minus R). In this figure, positive values indicate that the U models have larger mean PGA values than the R models. \myrevision{As it can be seen, this is true practically throughout the whole region at very low levels, but more predominantly in the north-west region at a moderate level of up to 0.2 g and increasingly so in the Zagros region, where the differences between about 0.2 and 0.45 g. The higher results in the U model occurred because of higher $M_{max}$ and lower $b$ values in comparison with the R model}.
+In general, the U models exhibit higher levels of expected ground motions when compared to their corresponding R models. This is illustrated in Fig.~\ref{fig:pga.diff}, which shows the difference between both models, U--R (U minus R). In this figure, positive values indicate that the U models have larger mean PGA values than the R models. As it can be seen, this is true practically throughout the whole region at very low levels, but more predominantly in the north-west region at a moderate level of up to 0.2 g and increasingly so in the Zagros region, where the differences between about 0.2 and 0.45 g. The higher results in the U model occurred because of higher $M_{max}$ and lower $b$ values in comparison with the R model.
 
 Overall, these results are consistent with the seismicity observed in Fig.~\ref{fig:catalog}. The R model results, however, seem to be more sensitive to the influence of large magnitude events observed in both the historical and modern seismicity maps, with a concentration of strong earthquakes in the Azerbaijan and Kopeh Dagh regios; whereas the U model results seem to be more sensitive to the influence of low-to-moderate magnitude events, especially in the Zagros and Central East regions.
 
-\myrevision{With this in mind, and knowing that no one model (R or U) can be considered uniquely correct, we consider now the combination of both models as presented for the complete logic tree in Fig.~\ref{fig:logic}. We refer to this as the (R,U) model and the results are shown in Fig.~\ref{fig:pga.ru.std}, again in the form of expected mean PGA values for 2 and 10 percent in 50 years.}
+With this in mind, and knowing that no one model (R or U) can be considered uniquely correct, we consider now the combination of both models as presented for the complete logic tree in Fig.~\ref{fig:logic}. We refer to this as the (R,U) model and the results are shown in Fig.~\ref{fig:pga.ru.std}, again in the form of expected mean PGA values for 2 and 10 percent in 50 years.
 
-\myrevision{The combined (R,U) model reflects the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as that of the major faults shown in Fig.~\ref{fig:selected}a, but it also reflects the influence that small earthquakes have on the seismicity hazard of the region}. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the North Alborz fault in the Alborz region and that of the different faults in the Kopeh Dagh region. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2 model results, where the expected accelerations are of the order of 1.0 g to the northwest of \myrevision{the} city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
+The combined (R,U) model reflects the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as that of the major faults shown in Fig.~\ref{fig:selected}a, but it also reflects the influence that small earthquakes have on the seismicity hazard of the region. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the North Alborz fault in the Alborz region and that of the different faults in the Kopeh Dagh region. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2 model results, where the expected accelerations are of the order of 1.0 g to the northwest of the city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
 
-\myrevision{We also note that the overall distribution of mean PGA agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, their results are in general slightly lower than ours. Obviously, given the differences in the catalogs, completeness magnitude, and in the seismicity parameters $M_{\max}$ and $b$, we cannot expect PGA values to match. For example, in the case of the $b$ values, \citet{Khodaverdian_2016_BSSA} reported large variations between 0.56 and 1.27, where over 50 percent of the grid points had $b$ values greater than 1; whereas in our study the $b$ values observe a narrow range of variation between 0.93 and 1.15. In this regard we should note that \citet{Khodaverdian_2016_BSSA} computed the seismicity parameters for each grid point considering the contributions within a circular area of radius 200 m, whereas we considered a uniform seismicity parameters for each region and account for the uncertainty in the difference between regions via the combination of the R and U models.}
+We also note that the overall distribution of mean PGA agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, their results are in general slightly lower than ours. Obviously, given the differences in the catalogs, completeness magnitude, and in the seismicity parameters $M_{\max}$ and $b$, we cannot expect PGA values to match. For example, in the case of the $b$ values, \citet{Khodaverdian_2016_BSSA} reported large variations between 0.56 and 1.27, where over 50 percent of the grid points had $b$ values greater than 1; whereas in our study the $b$ values observe a narrow range of variation between 0.93 and 1.15. In this regard we should note that \citet{Khodaverdian_2016_BSSA} computed the seismicity parameters for each grid point considering the contributions within a circular area of radius 200 m, whereas we considered a uniform seismicity parameters for each region and account for the uncertainty in the difference between regions via the combination of the R and U models.
 
-\myrevision{Altogether, on average, we found our results to be in good agreement with other previous results. For the city of Urmia, for instance, we obtained a expected PGA of 0.24 g, which is slightly lower than values obtained by \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for a 10 percent probability of exceedance in 50 years. We believe \citet{Zare2012} obtained higher values because their of use of a parametric method. For a 2 percent probability of exceedance in 50 years, \citet{Golara2014} obtained expected PGAs on the order of 0.3--0.5 g, where our mean value is 0.38 g. For the city of Tabriz, our results match with those obtained by \citet{BHRC2014} and are within the range of values computed by \citet{Zare2012}, for a 10 percent probability. These and other similar comparisons are summarized in Table \ref{tab:pga}, where we show our results and those of other previous studies for selected cities in northern Iran.}
+Altogether, on average, we found our results to be in good agreement with other previous results. For the city of Urmia, for instance, we obtained a expected PGA of 0.24 g, which is slightly lower than values obtained by \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for a 10 percent probability of exceedance in 50 years. We believe \citet{Zare2012} obtained higher values because their of use of a parametric method. For a 2 percent probability of exceedance in 50 years, \citet{Golara2014} obtained expected PGAs on the order of 0.3--0.5 g, where our mean value is 0.38 g. For the city of Tabriz, our results match with those obtained by \citet{BHRC2014} and are within the range of values computed by \citet{Zare2012}, for a 10 percent probability. These and other similar comparisons are summarized in Table \ref{tab:pga}, where we show our results and those of other previous studies for selected cities in northern Iran.
 
-\myrevision{As mentioned before, overall, our results are close to or within the ranges provided by most previous studies}. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher than the rest. \myrevision{One possible explanation for the higher values in \citet{Golara2014} is their use of the maximum credible earthquake as the value for $M_{\max}$. The maximum credible earthquake is the largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, based on geologic and seismic data. Therefore, it is often higher than historical documented observations or instrumental data-driven estimations of $M_{\max}$}.
+As mentioned before, overall, our results are close to or within the ranges provided by most previous studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher than the rest. One possible explanation for the higher values in \citet{Golara2014} is their use of the maximum credible earthquake as the value for $M_{\max}$. The maximum credible earthquake is the largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, based on geologic and seismic data. Therefore, it is often higher than historical documented observations or instrumental data-driven estimations of $M_{\max}$.
 
-Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA\myrevision{, also known as hazard curves. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran including the R, U, and the combined (R,U) models. Although for these particular cities, the differences are minor in general, they exemplify the results one can obtain at particular locations. Here, the more clear differences are observed for the city of Urmia, where the (R,U) model approaches the R model for low values of PGA and then evolves closer to the U model for higher values of PGA}.
+Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA, also known as hazard curves. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran including the R, U, and the combined (R,U) models. Although for these particular cities, the differences are minor in general, they exemplify the results one can obtain at particular locations. Here, the more clear differences are observed for the city of Urmia, where the (R,U) model approaches the R model for low values of PGA and then evolves closer to the U model for higher values of PGA.
 
 \begin{figure}[t]
     \centering
@@ -69,6 +69,6 @@ Following the comparisons shown in Table \ref{tab:pga}, we looked into the more 
     \label{fig:tehran}
 \end{figure}
 
-\myrevision{Last, we concentrate our attention on the results for the capital city of Tehran. We compare the hazard curve we obtained for Tehran with those computed by \citet{Ghodrati2003} and \citet{Boostan2015}. The hazard curve from \citet{Boostan2015} is the result of applying fuzzy sets theory to account for variations in the distance and magnitude of earthquakes. \citet{Ghodrati2003}, on the other hand, conducted a probabilistic seismic hazard analysis considering the uncertainty in the seismicity values and the ground motion levels of intensity through a logic tree approach. In particular, \citet{Ghodrati2003} used variations in $b$ and $M_{\max}$ based on the previous results of  \citet{Tavakoli1999}, where $b = 0.52 \pm0.02$ and $M_{\max} = 7.9 \pm 0.3$. This value of $M_{\max}$ is similar to ours for the region of Alborz, but the $b$ value is rather low. While \citet{Ghodrati2003} used three different attenuation relationships in their analysis, \citet{Boostan2015} used only one. The results of the comparison are shown in Fig.~\ref{fig:tehran}. This figure also includes comparisons with the value-ranges of other studies included in Table \ref{tab:pga} for 2 and 10 percent probability of exceedance in 50 years.}
+Last, we concentrate our attention on the results for the capital city of Tehran. We compare the hazard curve we obtained for Tehran with those computed by \citet{Ghodrati2003} and \citet{Boostan2015}. The hazard curve from \citet{Boostan2015} is the result of applying fuzzy sets theory to account for variations in the distance and magnitude of earthquakes. \citet{Ghodrati2003}, on the other hand, conducted a probabilistic seismic hazard analysis considering the uncertainty in the seismicity values and the ground motion levels of intensity through a logic tree approach. In particular, \citet{Ghodrati2003} used variations in $b$ and $M_{\max}$ based on the previous results of  \citet{Tavakoli1999}, where $b = 0.52 \pm0.02$ and $M_{\max} = 7.9 \pm 0.3$. This value of $M_{\max}$ is similar to ours for the region of Alborz, but the $b$ value is rather low. While \citet{Ghodrati2003} used three different attenuation relationships in their analysis, \citet{Boostan2015} used only one. The results of the comparison are shown in Fig.~\ref{fig:tehran}. This figure also includes comparisons with the value-ranges of other studies included in Table \ref{tab:pga} for 2 and 10 percent probability of exceedance in 50 years.
 
-\myrevision{As we discussed earlier, and as it can be seen based on the associated uncertainty carried by the GMPE (shaded area), our model accounts fairly well the expected ground motion level of variability. In general, for the city of Tehran, the mean results of our R, U and (R,U) models are very similar for all values. With respect to \citet{Ghodrati2003} and \citet{Boostan2015}, for PGA values lower than 0.25 g, which correspond to annual probabilities higher than $3 \times 10^{-3}$, our results are fairly close to those of \citet{Boostan2015}. However, at PGA values higher than 0.35 g and annual probabilities lower than $1 \times 10^{-3}$, our results fall halfway between the hazard curves of \citet{Ghodrati2003} and \citet{Boostan2015}. We also note that on average, our hazard curves are fairly centered with respect to the different discrete value-ranges of the other studies (reported in Table \ref{tab:pga} and indicated with empty-circle ranges in Fig.~\ref{fig:tehran}). We also note that all other results fall within the shaded area, which represents the upper and lower bounds of uncertainty in the GMPEs. In other words, results from all other studies are below and above our results for the GMPE+Unc.~and GMPE--Unc.~models in our logic tree analysis. This provides confidence in the approach followed here based on a centered backbone GMPE and the ideas put forward by \citet{Atkinson2014}.}
+As we discussed earlier, and as it can be seen based on the associated uncertainty carried by the GMPE (shaded area), our model accounts fairly well the expected ground motion level of variability. In general, for the city of Tehran, the mean results of our R, U and (R,U) models are very similar for all values. With respect to \citet{Ghodrati2003} and \citet{Boostan2015}, for PGA values lower than 0.25 g, which correspond to annual probabilities higher than $3 \times 10^{-3}$, our results are fairly close to those of \citet{Boostan2015}. However, at PGA values higher than 0.35 g and annual probabilities lower than $1 \times 10^{-3}$, our results fall halfway between the hazard curves of \citet{Ghodrati2003} and \citet{Boostan2015}. We also note that on average, our hazard curves are fairly centered with respect to the different discrete value-ranges of the other studies (reported in Table \ref{tab:pga} and indicated with empty-circle ranges in Fig.~\ref{fig:tehran}). We also note that all other results fall within the shaded area, which represents the upper and lower bounds of uncertainty in the GMPEs. In other words, results from all other studies are below and above our results for the GMPE+Unc.~and GMPE--Unc.~models in our logic tree analysis. This provides confidence in the approach followed here based on a centered backbone GMPE and the ideas put forward by \citet{Atkinson2014}.
