final version re-submitted

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,8 +1,4 @@
 
 \section{Concluding Remarks}
 
-We present results from a seismic hazard analysis for northern Iran based on a smoothed seismicity approach, including regional maps of expected peak ground accelerations for different seismic zonation models. In particular, we calculated the hazard for the region of interest using two basic models, a five-seismic zone regions model and a uniform seismic zone model, including uncertainty in the combination of both models, the seismic parameters, and the selection of a ground motion prediction equation via a logic tree approach. In general, our calculations yield results similar to those of other studies for the region of interest and the main cities in it. We, however, provide a newer and alternative perspective to the problem of seismic hazard analysis for norther Iran than previous studies because our use of a more complete seismic catalog, which includes recent damaging events and low-magnitude earthquakes. In our analysis we found that the combination of the regional and uniform models not only allowed us to account for the uncertainty in seismic zonation but it also led to a final hazard map that adjusted better to the visual interpretation of the historical and instrumental seismicity observed in the region of interest, the location of known seismically active faults, and the low-magnitude seismic activity in the region. While no one model can be deemed more appropriate than others, we believe our results constitute a positive contribution to the understanding of seismic hazard in the region, especially for rural areas that are not the subject of specialized hazard studies such as those conducted for major urban centers \myrevision{or specific sites of interest near notable faults with a history of damaging earthquakes}. Future work to \myrevision{complement and} improve the results presented here should consider other ground motion measures of intensity such as response spectral accelerations for different periods and site effects\myrevision{, as well as alternative ground motion prediction equations suitable for northern Iran. All things considered, we recognize that additional efforts are necessary to obtain a more robust estimate of hazard, especially for specific areas of interest. In this regard, future efforts should be directed to the combination of studies like this for the contribution of the background seismicity with more targeted studies considering extended source models for areas near major fault lines. It should also be noted that this is not a final assessment of the seismic hazard of the region, and decisions regarding seismic design or risk mitigation plans should consider this as well as other studies.}
-
-% NAEEM SUGGESTED CHANGE AT THE END
-
-% ...should consider generating random fault based on earthquake magnitude as well as considering actual faults, most recent developed ground motion measures of intensity such as response spectral accelerations for different periods and site effects.
+We present results from a seismic hazard analysis for northern Iran based on a smoothed seismicity approach, including regional maps of expected peak ground accelerations for different seismic zonation models. In particular, we calculated the hazard for the region of interest using two basic models, a five-seismic zone regions model and a uniform seismic zone model, including uncertainty in the combination of both models, the seismic parameters, and the selection of a ground motion prediction equation via a logic tree approach. In general, our calculations yield results similar to those of other studies for the region of interest and the main cities in it. We, however, provide a newer and alternative perspective to the problem of seismic hazard analysis for norther Iran than previous studies because our use of a more complete seismic catalog, which includes recent damaging events and low-magnitude earthquakes. In our analysis we found that the combination of the regional and uniform models not only allowed us to account for the uncertainty in seismic zonation but it also led to a final hazard map that adjusted better to the visual interpretation of the historical and instrumental seismicity observed in the region of interest, the location of known seismically active faults, and the low-magnitude seismic activity in the region. While no one model can be deemed more appropriate than others, we believe our results constitute a positive contribution to the understanding of seismic hazard in the region, especially for rural areas that are not the subject of specialized hazard studies such as those conducted for major urban centers \myrevision{or specific sites of interest near notable faults with a history of damaging earthquakes}. Future work to \myrevision{complement and} improve the results presented here should consider other ground motion measures of intensity such as response spectral accelerations for different periods and \myrevision{site conditions, as well as alternative ground motion prediction equations suitable for northern Iran. All things considered, we recognize that additional efforts are necessary to obtain a more robust estimate of hazard, especially for specific areas of interest. In this regard, future efforts should be directed to the combination of studies like this for the contribution of the background seismicity with more targeted studies considering extended source models for areas near major fault lines. It should also be noted that this is not a final assessment of the seismic hazard of the region, and decisions regarding seismic design or risk mitigation plans should consider this as well as other studies.}
