final submission for production as accepted

--- a/attenuation.tex
+++ b/attenuation.tex
@@ -30,7 +30,7 @@ where $Y$ is a ground motion parameter (here representing PGA), $V_A$ is a refer
 	\, ,
 \end{equation}
 %
-where $r_{\mathit{cl}}$ is the horizontal distance to the site of interest and $h$ is a reference fictitious depth, both given in km. \myrevision{We should note here that given the fact that the smoothed seismicity method assumes all earthquakes as individual point sources, $r_{\mathit{cl}}$ is the same as the epicentral distance.} According to \citet{Kalkan2004}, in the case of $Y$ representing PGA, the coefficients $b_1$, $b_2$, $b_3$, $b_5$ and $b_V$ are
+where $r_{\mathit{cl}}$ is the horizontal distance to the site of interest and $h$ is a reference fictitious depth, both given in km. We should note here that given the fact that the smoothed seismicity method assumes all earthquakes as individual point sources, $r_{\mathit{cl}}$ is the same as the epicentral distance. According to \citet{Kalkan2004}, in the case of $Y$ representing PGA, the coefficients $b_1$, $b_2$, $b_3$, $b_5$ and $b_V$ are
 %
 \begin{equation}
 \begin{array}{lcrlcr}
@@ -61,4 +61,4 @@ respectively. The standard deviation of the residuals $(\sigma_{\ln y})$ express
     \label{fig:logic}
 \end{figure*}
 
-We should note here that even though \citet{Kalkan2004} derived the above attenuation relationship for distances $r$ up to 250 km, \citet{Zafarani2014} only used data up to 200 km in their evaluation of the various GMPEs available. Therefore, to be consistent with the latter, we set the models in the hazard analysis to compute ground motion intensities (i.e., PGAs) at distances no greater than 200 km. \myrevision{We should also note that the values of $V_A$, $V_S$ and $h$ were kept constant throughout the calculations for this study. This was done because these are the values for which the attenuation relationship showed good agreement with PGA data from northern Iran at rock sites. While it would be tempting to adjust these values to the specific site conditions of each grid point, or to match the hypocentral depth of each earthquake in the catalog, doing this would effectively modify the goodness-of-fit of the GMPE with the data, and thus make the predictions inaccurate.}
+We should note here that even though \citet{Kalkan2004} derived the above attenuation relationship for distances $r$ up to 250 km, \citet{Zafarani2014} only used data up to 200 km in their evaluation of the various GMPEs available. Therefore, to be consistent with the latter, we set the models in the hazard analysis to compute ground motion intensities (i.e., PGAs) at distances no greater than 200 km. We should also note that the values of $V_A$, $V_S$ and $h$ were kept constant throughout the calculations for this study. This was done because these are the values for which the attenuation relationship showed good agreement with PGA data from northern Iran at rock sites. While it would be tempting to adjust these values to the specific site conditions of each grid point, or to match the hypocentral depth of each earthquake in the catalog, doing this would effectively modify the goodness-of-fit of the GMPE with the data, and thus make the predictions inaccurate.
