--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@ The Iranian plateau is located on the Himalayan-Alpine seismic belt. It is confi
 
 According to this tectonic setting and the geologic provinces of the plateau, Iranian earthquakes have been categorized into various seismic zones, ranging from the definition of four to nine major seismic zones in the more traditional studies \citep[e.g.,][]{Stocklin1968, Takin1972, Berberian1976}, and up to twenty to twenty-three seismotectonic provinces in the most elaborate ones \citep[e.g.,][]{Nowroozi1976, Tavakoli1999}. Contemporary, well-accepted models divide Iran into five major tectonic regions: Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran \citep[e.g.,][]{Mirzaei1998}. More recently, in a study aimed to develop a uniform earthquake catalog for Iran, \citet{Karimiparidari2013} further divided the Azerbaijan-Alborz region into two separate seismic zones: Azerbaijan and the Alborz Mountain Range, hereafter referred to simply as Alborz. We adopt the latter definition of six seismic zones and focus our attention on those most relevant to the northern part of the country, Azerbaijan, Alborz and Kopeh-Dagh.
 
-Over the last three decades there have been multiple efforts to estimate the seismic parameters and seismic hazard of Iran, and improve the assessment of seismic risk in the country \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE, Khodaverdian_2016_BSSA}. Altogether, these previous studies have helped improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. Such improvements are reflected, for instance, in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran. There is, however, room for improvement. The most recent of these studies, \citet{Khodaverdian_2016_BSSA}, presents an estimation of spatially-variable seismic parameters for Iran using an approach similar to the one we use here, but does not necessarily focus on hazard\myrevision{, and does not include the latest available data for the region}. Other previous efforts \myrevision{also} have outdated catalogs, use fault-centered hazard analyses, or focus on particular locations or cities. \myrevision{By contrast, our analysis presents a regional perspective which is likely to be more useful for rural areas that are usually not the subject of specialized studies on hazardous faults}.
+Over the last three decades there have been multiple efforts to estimate the seismic parameters and seismic hazard of Iran, and improve the assessment of seismic risk in the country \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE, Khodaverdian_2016_BSSA}. Altogether, these previous studies have helped improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. Such improvements are reflected, for instance, in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran. There is, however, room for improvement. The most recent of these studies, \citet{Khodaverdian_2016_BSSA}, presents an estimation of spatially-variable seismic parameters for Iran using an approach similar to the one we use here, but does not necessarily focus on hazard, and does not include the latest available data for the region. Other previous efforts also have outdated catalogs, use fault-centered hazard analyses, or focus on particular locations or cities. By contrast, our analysis presents a regional perspective which is likely to be more useful for rural areas that are usually not the subject of specialized studies on hazardous faults.
 
 In the present study, we focus our attention on northern Iran. This region houses about 41 percent (32 million) of the total population of the country, with most living in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Urmia, Rasht, and Ardabil. This region has suffered multiple devastating earthquakes in the past \citep[e.g.,][]{Mehrain_1990_Tech, Chafory-Ashtiany_1999_DPM, Razzaghi_2012_Tech}, and has recently been the subject of various efforts to better characterize seismic hazard \citep[e.g.,][]{Abdollahzadeh2014a, Boostan2015}. Among other things, these studies have highlighted the prevailing differences between alternative approaches, the importance of quantifying uncertainty, and the need for considering all potential faults---even if believed inactive---by adopting new methodos and the latest available data.
 
