--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,9 @@
 \usepackage{textcomp}
 
 
-% Revision format added 
-\usepackage[dvipsnames]{xcolor}
-\newcommand{\myrevision}[1]{\textcolor{ForestGreen}{#1}}
+% Revision format added
+% \usepackage[dvipsnames]{xcolor}
+% \newcommand{\myrevision}[1]{\textcolor{ForestGreen}{#1}}
 
 
 
@@ -59,7 +59,7 @@
 	Department of Civil Engineering, and
 	Center for Earthquake Research and Information,
 	University of Memphis, 3890 Central Ave., Memphis TN 38152, USA\\
-	\email{ricardo.taborda@memphis.edu}  
+	\email{ricardo.taborda@memphis.edu}
 }
 
 
@@ -75,8 +75,8 @@
 \begin{abstract}
 	\input{abstract}
 	\keywords{%
-		Seismic hazard \and 
-		Spatially smoothed seismicity 
+		Seismic hazard \and
+		Spatially smoothed seismicity
 		\and Northern Iran
 	}
 \end{abstract}
@@ -94,4 +94,3 @@
 
 % END: The Document
 \end{document}
-
