--- a/references.bib
+++ b/references.bib
@@ -1072,6 +1072,17 @@
   Doi                      = {10.1111/j.1365-246x.2011.05287.x}
 }
 
+@Article{Stein_2012_Tecto,
+  Title                    = {Why earthquake hazard maps often fail and what to do about it},
+  Author                   = {Stein, Seth and Geller, Robet J. and Liu, Mian},
+  Journal                  = {Tectonophysics},
+  Year                     = {2012},
+  Pages                    = {1--25},
+  Volume                   = {562-563},
+
+  Doi                      = {10.1016/j.tecto.2012.06.047}
+}
+
 @Article{Stocklin1968,
   Title                    = {Structural history and tectonics of {I}ran: {A} review},
   Author                   = {Stocklin, Jovan},
