--- a/submission.tex
+++ b/submission.tex
@@ -14,9 +14,9 @@
 \usepackage[left,displaymath,running]{lineno}
 \usepackage[tablesfirst,notablist]{endfloat}
 
-% Revision format added 
-\usepackage[dvipsnames]{xcolor}
-\newcommand{\myrevision}[1]{\textcolor{ForestGreen}{#1}}
+% Revision format added
+% \usepackage[dvipsnames]{xcolor}
+% \newcommand{\myrevision}[1]{\textcolor{ForestGreen}{#1}}
 
 \setallmargins{1in}
 
